# Demon-Goat-Salon

./: Cargo.toml  README.md
assets/: README.md
src/: consts.rs  main.rs
src/animation/: animation_states.rs  mod.rs  sprite_animation.rs
src/engine/: asset_loader.rs  game_runner.rs  input_manager.rs
src/ui/: customer_details.rs  game_over.rs  main_menu.rs  mod.rs
src/world/: goat.rs  mod.rs  platform_control.rs  players.rs  salon.rs
