[package]
name = "demon-goat-salon"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.3.1"
bevy = "0.16.1"
bevy-tnua = "0.24.0"
bevy-tnua-avian2d = "0.5.0"
bevy_asset_loader = "0.23.0"
bevy_enhanced_input = "0.15.2"
bevy_seedling = "0.4.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"